--- a/CSS_advanced/styles/6-style.css
+++ b/CSS_advanced/styles/6-style.css
@@ -31,6 +31,7 @@ html {
 
   h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
   }
   
   a {
