Reconfigured root properties

--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -350,55 +350,37 @@
           /* =======================
               End of normalize.css 
           =========================*/
-  
-  /* ================== variables for colors =====================*/
-  :root {
-      --color-primary: #d73953;
-      --color-black : #090909;
-      --color-white : #ffffff;
-      --color-light-grey: #f3f3f3;
-      --color-dark-grey: #353535;
-      --text-color: var(--color-black);
-      --section-title-color:var(--color-black);
-  
-  /* ================== variables for font family =====================*/
-      --font-family-base: "Open Sans" "Helvetica Neue", Helvetica, Arial, sans-serif;
-      --font-family-title: "Raleway" "Helvetica Neue", Helvetica, Arial, sans-serif;
-  
-  /* ============== variables for fonts sizes =================*/
-      --font-size-small: 1.2rem;
-      --font-size-medium: 1.6rem;
-      --font-size-large: 1.8rem;
-      --font-size-x-large: 2.3rem;
-      --font-size-xx-large: 4.8rem;
-  
-  /* ================ variables for font-weight ======================= */
-      --font-weight-regular: 400;
-      --font-weight-bold: 700;
-  
-  /* ================== Variables for line heights ===================*/
-      --line-height-small:1.2;
-      --line-height-base:1.5;
-      --line-height-big:1.8; 
-  
-  /* ================= Variables for alignment =================*/
-      --section-header-align: center;
-      --section-footer-padding: 3rem 0 0;  
-  
-  /* ================= Variables for transformations ==================*/    
-      --section-tagline-transform:uppercase;
-  
-   /* ================ Variables for margins ================== */   
-      --section-title-margin:0px;
+:root {
+    --color-primary: #d73953;
+    --color-black: #090909;
+    --color-white: #ffffff;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
+    --text-color: var(--color-black);
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-size-small: 1.2rem;
+    --font-size-medium: 1.6rem;
+    --font-size-large: 1.8rem;
+    --font-size-x-large: 2.3rem;
+    --font-size-xx-large: 4.8rem;
+    --font-weight-regular: 400;
+    --font-weight-bold: 700;
+    --line-height-small: 1.2;
+    --line-height-base: 1.5;
+    --line-height-big: 1.8;
+    --section-header-align: center;
+    --section-tagline-transform: uppercase;
+    --section-title-margin: 0;
+    --section-title-color: var(--color-black);
+    --section-padding: 5rem 0;
+    --section-header-padding: 0 0 3rem;
+    --section-body-padding: 0 0 3rem;
+    --section-footer-padding: 3rem 0 0;
+    --section-footer-align: center;
+    --footer-padding: 5rem 0 1rem;
+}
 
-    /* ================ Variables for padding ================== */
-      --section-padding: 5rem 0;
-      --section-header-padding: 0 0 3rem;
-      --section-body-padding: 0 0 3rem;
-      --section-footer-padding: 3rem 0 0;
-      --footer-padding: 5rem 0 1rem;
-  }
-  
   *, *::before, *::after {
     box-sizing: border-box;
   }
