--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -443,7 +443,8 @@
   }
 
   .section-footer{
-    padding: (--section-footer-padding);
+    padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
   }
   
   .section-title{
