--- a/CSS_advanced/styles/21-style.css
+++ b/CSS_advanced/styles/21-style.css
@@ -165,15 +165,16 @@ ul.row {
 
 .col-1-3 {
     width: 33.33%;
-    float: left;
-    padding: 0.5rem;
 }
 
 .col-1-2 {
     width: 50%;
+}
+
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
-}
+  }
 
 .footer-copyright{
     margin: 0;
