--- a/CSS_advanced/styles/22-style.css
+++ b/CSS_advanced/styles/22-style.css
@@ -182,6 +182,14 @@ ul.row {
     background-color: var(--color-black);
 }
 
+.footer-address {
+    color: var(--text-color);
+  }
+  
+  .social-link {
+    display: block;
+  }
+
 .footer-copyright{
     margin: 0;
     font-size: var(--font-size-small);
