Added missing variable for social

--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -186,8 +186,9 @@ ul.row {
     color: var(--text-color);
   }
   
-  .social-link {
+.social-link {
     display: block;
+    color: var(--text-color);
   }
 
 .footer-copyright{
