--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -289,7 +289,7 @@ ul.footer {
     margin: 0;
 }
 
-.card-services {
+.card-services a {
     display: block;
     padding: 2rem;
     background-color: var(--color-light-grey);
@@ -349,7 +349,7 @@ ul.footer {
     position: relative;
   }
   
-.card-work .card-title {
+.card-work .card-title a {
     display: block;
     text-decoration: none;
     padding-top: 45%;
