--- a/sass_scss/1-color_variable.scss
+++ b/sass_scss/1-color_variable.scss
@@ -1,5 +1,4 @@
-/* Write a Sass file that assigns the text color
-#3D3D3D to the HTML tags body and p */
+/* Assigns the text color body and p tags */
 $black: #3D3D3D;
 
 body {
