--- a/form/00-styles.css
+++ b/form/00-styles.css
@@ -91,8 +91,7 @@
     --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
   }
   
-  /* Base
-      ============================= */
+  /* Base ============================= */
   
   *, *:before, *:after {
     box-sizing: border-box;
