--- a/flexbox/5-styles.css
+++ b/flexbox/5-styles.css
@@ -568,11 +568,6 @@
   
     /** HEADER **/
     --header-padding: 4rem 0 0;
-    --header-logo-position: relative;
-    --header-logo-link-display: inline-block;
-    --header-logo-link-position: absolute;
-    --header-logo-link-top: -1rem;
-    --header-logo-link-left: 0;
   
     /** FOOTER **/
     --footer-padding: 5rem 0 1rem;
@@ -711,11 +706,8 @@
   /* Navbar
       ============================= */
   
-  .navbar-menu {
-    float: right;
-  }
-  
   .nav {
+    display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
