--- a/flexbox/7-styles.css
+++ b/flexbox/7-styles.css
@@ -255,6 +255,7 @@
   .header-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   /* Footer
@@ -493,4 +494,3 @@
     font-size: 10rem;
     z-index: -1;
   }
-  
